assignment3/nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-nginx
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config-nginx
        configMap: 
          name: nginx-config
          items:
          - key: nginx.cfg
            path: default.conf
